Added an interface manager (WIP)

--- a/Platformwrapper_cpp.vcxproj
+++ b/Platformwrapper_cpp.vcxproj
@@ -146,6 +146,9 @@
     <ClInclude Include="Source\Configuration\Macros.h" />
     <ClInclude Include="Source\Configuration\Warnings.h" />
     <ClInclude Include="Source\StdInclude.h" />
+    <ClInclude Include="Source\Steam\CSteamID.h" />
+    <ClInclude Include="Source\Steam\Interfacemanager.h" />
+    <ClInclude Include="Source\Steam\Interfaces\All.h" />
     <ClInclude Include="Source\Steam\Steam.h" />
     <ClInclude Include="Source\Utilities\Binary\Hooking.h" />
     <ClInclude Include="Source\Utilities\Binary\Memprotect.h" />
@@ -156,6 +159,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Appmain.cpp" />
+    <ClCompile Include="Source\Steam\Interfacemanager.cpp" />
     <ClCompile Include="Source\Utilities\Binary\Hooking.cpp" />
     <ClCompile Include="Source\Utilities\Binary\Memprotect.cpp" />
     <ClCompile Include="Source\Utilities\Data\Bytebuffer.cpp" />
