--- a/Platformwrapper_cpp.vcxproj
+++ b/Platformwrapper_cpp.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="Source\Steam\Interfacemanager.h" />
     <ClInclude Include="Source\Steam\Interfaces\All.h" />
     <ClInclude Include="Source\Steam\Steam.h" />
+    <ClInclude Include="Source\Steam\Steamcallbacks.h" />
     <ClInclude Include="Source\Utilities\Binary\Hooking.h" />
     <ClInclude Include="Source\Utilities\Binary\Memprotect.h" />
     <ClInclude Include="Source\Utilities\Crypto\FNV1.h" />
@@ -160,6 +161,7 @@
   <ItemGroup>
     <ClCompile Include="Source\Appmain.cpp" />
     <ClCompile Include="Source\Steam\Interfacemanager.cpp" />
+    <ClCompile Include="Source\Steam\Steamcallback.cpp" />
     <ClCompile Include="Source\Utilities\Binary\Hooking.cpp" />
     <ClCompile Include="Source\Utilities\Binary\Memprotect.cpp" />
     <ClCompile Include="Source\Utilities\Data\Bytebuffer.cpp" />
