Added the steamfriends.

--- a/Platformwrapper_cpp.vcxproj
+++ b/Platformwrapper_cpp.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="Source\Appmain.cpp" />
     <ClCompile Include="Source\Steam\Interfacemanager.cpp" />
     <ClCompile Include="Source\Steam\Interfaces\SteamApps.cpp" />
+    <ClCompile Include="Source\Steam\Interfaces\SteamFriends.cpp" />
     <ClCompile Include="Source\Steam\Steamcallback.cpp" />
     <ClCompile Include="Source\Steam\Steamconfig.cpp" />
     <ClCompile Include="Source\Utilities\Binary\Hooking.cpp" />
