--- a/Platformwrapper_cpp.vcxproj
+++ b/Platformwrapper_cpp.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="Source\Steam\Interfaces\SteamFriends.cpp" />
     <ClCompile Include="Source\Steam\Interfaces\SteamGameserver.cpp" />
     <ClCompile Include="Source\Steam\Interfaces\SteamMatchmaking.cpp" />
+    <ClCompile Include="Source\Steam\Interfaces\SteamNetworking.cpp" />
     <ClCompile Include="Source\Steam\Steamcallback.cpp" />
     <ClCompile Include="Source\Steam\Steamconfig.cpp" />
     <ClCompile Include="Source\Utilities\Binary\Hooking.cpp" />
