--- a/Platformwrapper_cpp.vcxproj
+++ b/Platformwrapper_cpp.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="Source\Steam\Interfaces\SteamGameserver.cpp" />
     <ClCompile Include="Source\Steam\Interfaces\SteamMatchmaking.cpp" />
     <ClCompile Include="Source\Steam\Interfaces\SteamNetworking.cpp" />
+    <ClCompile Include="Source\Steam\Interfaces\SteamRemotestorage.cpp" />
     <ClCompile Include="Source\Steam\Steamcallback.cpp" />
     <ClCompile Include="Source\Steam\Steamconfig.cpp" />
     <ClCompile Include="Source\Utilities\Binary\Hooking.cpp" />
