--- a/Platformwrapper_cpp.vcxproj
+++ b/Platformwrapper_cpp.vcxproj
@@ -169,6 +169,7 @@
     <ClCompile Include="Source\Steam\Interfaces\SteamNetworking.cpp" />
     <ClCompile Include="Source\Steam\Interfaces\SteamRemotestorage.cpp" />
     <ClCompile Include="Source\Steam\Interfaces\SteamScreenshots.cpp" />
+    <ClCompile Include="Source\Steam\Interfaces\SteamUser.cpp" />
     <ClCompile Include="Source\Steam\Steamcallback.cpp" />
     <ClCompile Include="Source\Steam\Steamconfig.cpp" />
     <ClCompile Include="Source\Utilities\Binary\Hooking.cpp" />
