--- a/Platformwrapper_cpp.vcxproj
+++ b/Platformwrapper_cpp.vcxproj
@@ -22,32 +22,31 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{0FE40C96-A011-470A-A945-4600A4EB4D1C}</ProjectGuid>
     <RootNamespace>Platformwrapper_cpp</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141_clang_c2</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141_clang_c2</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141_clang_c2</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141_clang_c2</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
@@ -75,7 +74,6 @@
     <TargetExt>.ayria$(PlatformArchitecture)</TargetExt>
     <UseMultiToolTask>true</UseMultiToolTask>
     <LinkIncremental>false</LinkIncremental>
-    <TargetName>Platformwrapper</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(ProjectDir)Bin\</OutDir>
@@ -83,7 +81,6 @@
     <TargetExt>.ayria$(PlatformArchitecture)</TargetExt>
     <UseMultiToolTask>true</UseMultiToolTask>
     <LinkIncremental>false</LinkIncremental>
-    <TargetName>Platformwrapper</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(ProjectDir)Bin\</OutDir>
@@ -91,7 +88,6 @@
     <TargetExt>.ayria$(PlatformArchitecture)</TargetExt>
     <UseMultiToolTask>true</UseMultiToolTask>
     <LinkIncremental>false</LinkIncremental>
-    <TargetName>Platformwrapper</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(ProjectDir)Bin\</OutDir>
@@ -99,11 +95,10 @@
     <TargetExt>.ayria$(PlatformArchitecture)</TargetExt>
     <UseMultiToolTask>true</UseMultiToolTask>
     <LinkIncremental>false</LinkIncremental>
-    <TargetName>Platformwrapper</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <WarningLevel>EnableAllWarnings</WarningLevel>
+      <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -111,7 +106,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <WarningLevel>EnableAllWarnings</WarningLevel>
+      <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -119,7 +114,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <WarningLevel>EnableAllWarnings</WarningLevel>
+      <WarningLevel>Level4</WarningLevel>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -133,7 +128,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <WarningLevel>EnableAllWarnings</WarningLevel>
+      <WarningLevel>Level4</WarningLevel>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -150,45 +145,21 @@
     <ClInclude Include="Source\Configuration\Macros.h" />
     <ClInclude Include="Source\Configuration\Warnings.h" />
     <ClInclude Include="Source\StdInclude.h" />
-    <ClInclude Include="Source\Steam\CSteamID.h" />
-    <ClInclude Include="Source\Steam\Interfacemanager.h" />
-    <ClInclude Include="Source\Steam\Interfaces\All.h" />
-    <ClInclude Include="Source\Steam\Steam.h" />
-    <ClInclude Include="Source\Steam\Steamcallbacks.h" />
-    <ClInclude Include="Source\Utilities\Binary\GetIAT.h" />
-    <ClInclude Include="Source\Utilities\Binary\Hooking.h" />
-    <ClInclude Include="Source\Utilities\Binary\Memprotect.h" />
-    <ClInclude Include="Source\Utilities\Crypto\FNV1.h" />
-    <ClInclude Include="Source\Utilities\Data\Bytebuffer.h" />
-    <ClInclude Include="Source\Utilities\Text\CSV.h" />
-    <ClInclude Include="Source\Utilities\Text\Logfile.h" />
-    <ClInclude Include="Source\Utilities\Text\Variadicstring.h" />
+    <ClInclude Include="Source\Utility\Binary\Hooking.h" />
+    <ClInclude Include="Source\Utility\Binary\Memprotect.h" />
+    <ClInclude Include="Source\Utility\Binary\Patternscan.h" />
+    <ClInclude Include="Source\Utility\Cryptography\FNV1Hash.h" />
+    <ClInclude Include="Source\Utility\Data\Base64.h" />
+    <ClInclude Include="Source\Utility\Data\Bytebuffer.h" />
+    <ClInclude Include="Source\Utility\Text\Logfile.h" />
+    <ClInclude Include="Source\Utility\Text\Variadicstring.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Appmain.cpp" />
-    <ClCompile Include="Source\Steam\Interfacemanager.cpp" />
-    <ClCompile Include="Source\Steam\Interfaces\SteamApps.cpp" />
-    <ClCompile Include="Source\Steam\Interfaces\SteamFriends.cpp" />
-    <ClCompile Include="Source\Steam\Interfaces\SteamGameserver.cpp" />
-    <ClCompile Include="Source\Steam\Interfaces\SteamMasterserverUpdater.cpp" />
-    <ClCompile Include="Source\Steam\Interfaces\SteamMatchmaking.cpp" />
-    <ClCompile Include="Source\Steam\Interfaces\SteamNetworking.cpp" />
-    <ClCompile Include="Source\Steam\Interfaces\SteamRemotestorage.cpp" />
-    <ClCompile Include="Source\Steam\Interfaces\SteamScreenshots.cpp" />
-    <ClCompile Include="Source\Steam\Interfaces\SteamUser.cpp" />
-    <ClCompile Include="Source\Steam\Interfaces\SteamUserstats.cpp" />
-    <ClCompile Include="Source\Steam\Interfaces\SteamUtilities.cpp" />
-    <ClCompile Include="Source\Steam\Steam.cpp" />
-    <ClCompile Include="Source\Steam\Steamcallback.cpp" />
-    <ClCompile Include="Source\Steam\Steamconfig.cpp" />
-    <ClCompile Include="Source\Utilities\Binary\GetIAT.cpp" />
-    <ClCompile Include="Source\Utilities\Binary\Hooking.cpp" />
-    <ClCompile Include="Source\Utilities\Binary\Memprotect.cpp" />
-    <ClCompile Include="Source\Utilities\Data\Bytebuffer.cpp" />
-    <ClCompile Include="Source\Utilities\Text\CSV.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Platformwrapper_cpp.licenseheader" />
+    <ClCompile Include="Source\Utility\Binary\Hooking.cpp" />
+    <ClCompile Include="Source\Utility\Binary\Memprotect.cpp" />
+    <ClCompile Include="Source\Utility\Binary\Patternscan.cpp" />
+    <ClCompile Include="Source\Utility\Data\Bytebuffer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
