Added steam exports.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.1.0)
-project(Plugintemplate_cpp)
+project(Platformwrapper_cpp)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_BUILD_TYPE Debug)
@@ -7,8 +7,12 @@ set(LIBRARY_OUTPUT_PATH "Bin")
 
 file(GLOB_RECURSE SOURCES "Source/*.cpp")
 
-add_library(Plugintemplate32 SHARED ${SOURCES})
-add_library(Plugintemplate64 SHARED ${SOURCES})
+add_library(Platformwrapper32 SHARED ${SOURCES})
+add_library(Platformwrapper64 SHARED ${SOURCES})
+add_library(steam_api SHARED ${SOURCES})
 
-set_target_properties(Plugintemplate32 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
-set_target_properties(Plugintemplate64 PROPERTIES COMPILE_FLAGS "-m64" LINK_FLAGS "-m64")
+set_target_properties(Platformwrapper32 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
+set_target_properties(Platformwrapper64 PROPERTIES COMPILE_FLAGS "-m64" LINK_FLAGS "-m64")
+set_target_properties(Platformwrapper32 Platformwrapper64 PROPERTIES PREFIX "")
+set_target_properties(Platformwrapper32 PROPERTIES SUFFIX "ayria32")
+set_target_properties(Platformwrapper64 PROPERTIES SUFFIX "ayria64")
