--- a/Platformwrapper_cpp.vcxproj
+++ b/Platformwrapper_cpp.vcxproj
@@ -98,28 +98,33 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <WarningLevel>Level4</WarningLevel>
+      <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <MinimalRebuild>false</MinimalRebuild>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <WarningLevel>Level4</WarningLevel>
+      <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <MinimalRebuild>false</MinimalRebuild>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <WarningLevel>Level4</WarningLevel>
+      <WarningLevel>Level3</WarningLevel>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -128,12 +133,13 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <WarningLevel>Level4</WarningLevel>
+      <WarningLevel>Level3</WarningLevel>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -144,18 +150,39 @@
     <ClInclude Include="Source\Configuration\Defines.h" />
     <ClInclude Include="Source\Configuration\Macros.h" />
     <ClInclude Include="Source\Configuration\Warnings.h" />
-    <ClInclude Include="Source\StdInclude.h" />
+    <ClInclude Include="Source\Stdinclude.h" />
+    <ClInclude Include="Source\Steam\CSteamID.h" />
+    <ClInclude Include="Source\Steam\Interfaces\Interfaces.h" />
+    <ClInclude Include="Source\Steam\Steam.h" />
+    <ClInclude Include="Source\Steam\Steamcallback.h" />
+    <ClInclude Include="Source\Steam\Steaminterface.h" />
     <ClInclude Include="Source\Utility\Binary\Hooking.h" />
     <ClInclude Include="Source\Utility\Binary\Memprotect.h" />
     <ClInclude Include="Source\Utility\Binary\Patternscan.h" />
     <ClInclude Include="Source\Utility\Cryptography\FNV1Hash.h" />
     <ClInclude Include="Source\Utility\Data\Base64.h" />
     <ClInclude Include="Source\Utility\Data\Bytebuffer.h" />
+    <ClInclude Include="Source\Utility\Data\Database.h" />
+    <ClInclude Include="Source\Utility\Text\CSV.h" />
     <ClInclude Include="Source\Utility\Text\Logfile.h" />
     <ClInclude Include="Source\Utility\Text\Variadicstring.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Appmain.cpp" />
+    <ClCompile Include="Source\Steam\Interfaces\SteamApps.cpp" />
+    <ClCompile Include="Source\Steam\Interfaces\SteamFriends.cpp" />
+    <ClCompile Include="Source\Steam\Interfaces\SteamGameserver.cpp" />
+    <ClCompile Include="Source\Steam\Interfaces\SteamMatchmaking.cpp" />
+    <ClCompile Include="Source\Steam\Interfaces\SteamNetworking.cpp" />
+    <ClCompile Include="Source\Steam\Interfaces\SteamRemotestorage.cpp" />
+    <ClCompile Include="Source\Steam\Interfaces\SteamScreenshots.cpp" />
+    <ClCompile Include="Source\Steam\Interfaces\SteamUser.cpp" />
+    <ClCompile Include="Source\Steam\Interfaces\SteamUserstats.cpp" />
+    <ClCompile Include="Source\Steam\Interfaces\SteamUtilities.cpp" />
+    <ClCompile Include="Source\Steam\Steam.cpp" />
+    <ClCompile Include="Source\Steam\Steamcallback.cpp" />
+    <ClCompile Include="Source\Steam\Steamconfig.cpp" />
+    <ClCompile Include="Source\Steam\Steaminterface.cpp" />
     <ClCompile Include="Source\Utility\Binary\Hooking.cpp" />
     <ClCompile Include="Source\Utility\Binary\Memprotect.cpp" />
     <ClCompile Include="Source\Utility\Binary\Patternscan.cpp" />
