--- a/Platformwrapper_cpp.vcxproj
+++ b/Platformwrapper_cpp.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="Source\Utility\Data\Base64.h" />
     <ClInclude Include="Source\Utility\Data\Bytebuffer.h" />
     <ClInclude Include="Source\Utility\Data\Database.h" />
+    <ClInclude Include="Source\Utility\Data\SystemIO.h" />
     <ClInclude Include="Source\Utility\Text\CSV.h" />
     <ClInclude Include="Source\Utility\Text\Logfile.h" />
     <ClInclude Include="Source\Utility\Text\Variadicstring.h" />
